--- a/index.html
+++ b/index.html
@@ -121,9 +121,20 @@
             </div>
 
             <div class="projeto">
-                <a href="#" target="_blank">
-                    <img src="https://via.placeholder.com/515X700" alt="Capa do projeto">
+                <a href="https://gabriel-felix-pimenta.github.io/app-previsao-do-tempo/" target="_blank">
+                    <img src="./src/Imagens/projeto-previsao-do-tempo.png" alt="Projeto Previsão do Tempo">
                     <h3>Projeto 5</h3>
+                    <div class="informacoes-projeto">
+                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                        <p>🔗 Ver no GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="projeto">
+                <a href="https://gabriel-felix-pimenta.github.io/projeto-hod/" target="_blank">
+                    <img src="./src/Imagens/projeto-hod.png" alt="Projeto House of Dragons">
+                    <h3>Projeto 6</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
                         <p>🔗 Ver no GitHub Pages</p>
@@ -134,7 +145,7 @@
             <div class="projeto">
                 <a href="#" target="_blank">
                     <img src="https://via.placeholder.com/515X700" alt="Capa do projeto">
-                    <h3>Projeto 5</h3>
+                    <h3>Projeto 7</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
                         <p>🔗 Ver no GitHub Pages</p>
@@ -145,18 +156,7 @@
             <div class="projeto">
                 <a href="#" target="_blank">
                     <img src="https://via.placeholder.com/515X700" alt="Capa do projeto">
-                    <h3>Projeto 5</h3>
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
-                        <p>🔗 Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="projeto">
-                <a href="#" target="_blank">
-                    <img src="https://via.placeholder.com/515X700" alt="Capa do projeto">
-                    <h3>Projeto 5</h3>
+                    <h3>Projeto 8</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
                         <p>🔗 Ver no GitHub Pages</p>
